--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ chapter02/javaconfig/target/**
 chapter05_tmp01/spitt/target/**
 chapter05/target/**
 chapter072/target/**
+chapter072/multipart/target/**
