no root configuration

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ chapter05_tmp01/spitt/target/**
 chapter05/target/**
 chapter072/target/**
 chapter072/multipart/target/**
+chapter072_tmp01/multi/target/**
